utiliser les repositories jdbc sur les query handlers